@@ -1,0 +1,94 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Language Code="PL" Name="Polish" Author="www.portable.info.pl">
+  <Text Key="Ok">OK</Text>
+  <Text Key="Cancel">Anuluj</Text>
+  <Text Key="Yes">Tak</Text>
+  <Text Key="No">Nie</Text>
+  <Text Key="Donate">Darowizna</Text>
+  <Text Key="All">Wszystko</Text>
+  <Text Key="Today">Dzisiaj</Text>
+  <Text Key="Yesterday">Wczoraj</Text>
+  <Text Key="This_Week">W tym tygodniu</Text>
+  <Text Key="Flagged">Zaznaczone</Text>
+  <Text Key="Flagged_Notes">Zaznaczone notatki</Text>
+  <Text Key="Recent_Notes">Ostatnie notatki</Text>
+  <Text Key="Settings">Ustawienia</Text>
+  <Text Key="Appearance">Wygląd</Text>
+  <Text Key="Advanced">Zaawansowane</Text>
+  <Text Key="About">O...</Text>
+  <Text Key="Notes">Notatki</Text>
+  <Text Key="Color">Kolor</Text>
+  <Text Key="Language">Języki</Text>
+  <Text Key="Sorting">Sortowanie</Text>
+  <Text Key="Notebooks">Notesy</Text>
+  <Text Key="All_Notes">Wszystkie notatki</Text>
+  <Text Key="Unfiled_Notes">Notatki niesklasyfikowane</Text>
+  <Text Key="New_Note">Nowa notatka</Text>
+  <Text Key="New_Notebook">Nowy notes</Text>
+  <Text Key="New_Notebook_Enter_Name">Wprowadź nazwę dla nowego notesu</Text>
+  <Text Key="Import_Note">Importuj notatkę</Text>
+  <Text Key="New_Note_In">Nowa notatka w</Text>
+  <Text Key="Rename_This_Notebook">Zmień nazwę tego notesu</Text>
+  <Text Key="Delete_This_Notebook">Usuń ten notes</Text>
+  <Text Key="Flag_This_Note">Oznacz tę notatkę</Text>
+  <Text Key="Delete_This_Note">Usuń tę notatkę</Text>
+  <Text Key="Font_Size">Rozmiar czcionki</Text>
+  <Text Key="Preview">Podgląd</Text>
+  <Text Key="Closing">Zamknij</Text>
+  <Text Key="Follow_Windows_Color">Kolor systemu Windows</Text>
+  <Text Key="Add_More_Colors">Dodaj więcej kolorów</Text>
+  <Text Key="Choose_Language">Wybierz język</Text>
+  <Text Key="Sort_Notes_By_modification_Date">Sortuj notatki według daty modyfikacji</Text>
+  <Text Key="Close_notes_with_escape">Zamykaj notatki klawiszem [Esc]</Text>
+  <Text Key="Jump_List">Lista na pasku zadań</Text>
+  <Text Key="Number_Of_Notes_In_Jumplist">Liczba notatek na liście paska zadań:</Text>
+  <Text Key="Components">Składniki</Text>
+  <Text Key="Is_Useful">Czy program Knowte jest przydatny?</Text>
+  <Text Key="Delete_Note">Usuń notatkę</Text>
+  <Text Key="Delete_Note_Confirm">Czy jesteś pewien, że chcesz usunąć notatkę '%notename%'?</Text>
+  <Text Key="Information">Informacja</Text>
+  <Text Key="Normal">Normalny</Text>
+  <Text Key="Large">Duży</Text>
+  <Text Key="Larger">Większy</Text>
+  <Text Key="Text">Tekst</Text>
+  <Text Key="Link">Link</Text>
+  <Text Key="List">Lista</Text>
+  <Text Key="Undo">Cofnij</Text>
+  <Text Key="Redo">Gotowe</Text>
+  <Text Key="Export">Eksport</Text>
+  <Text Key="Print">Drukuj</Text>
+  <Text Key="Search">Szukaj</Text>
+  <Text Key="Export_To_Rtf">Eksport do formatu RTF</Text>
+  <Text Key="Export_Note">Eksportuj notatkę</Text>
+  <Text Key="Bold">Bold</Text>
+  <Text Key="Italic">Italic</Text>
+  <Text Key="Underline">Podkreśl</Text>
+  <Text Key="Strikeout">Skreśl</Text>
+  <Text Key="Fixed_Width">Stała szerokość</Text>
+  <Text Key="Highlight">Uwydatnij</Text>
+  <Text Key="Edit_Notebook">Edytuj notes</Text>
+  <Text Key="Enter_New_Name_For_Notebook">Wprowadź nową nazwę dla notesu '%notebookname%'</Text>
+  <Text Key="Delete_Notebook">Usuń notes</Text>
+  <Text Key="Delete_Notebook_Confirm">Czy jesteś pewien, że chcesz usunąć notes '%notebookname%'?</Text>
+  <Text Key="Click_Here_To_Change_Notebook">Kliknij tutaj, aby zmienić notes</Text>
+  <Text Key="Click_Here_To_Change_Title">Kliknij tutaj, aby zmienić tytuł</Text>
+  <Text Key="Hide_Search">Ukryj wyszukiwanie</Text>
+  <Text Key="Error">Błąd</Text>
+  <Text Key="Warning">Ostrzeżenie</Text>
+  <Text Key="Error_Unexpected_Error">Wystąpił nieoczekiwany błąd.</Text>
+  <Text Key="Note_Could_Not_Be_Opened">Notatka nie może być otwarta</Text>
+  <Text Key="Problem_Creating_Notebook">Wystąpił problem podczas tworzenia notesu.</Text>
+  <Text Key="Problem_Creating_Note">Wystąpił problem podczas tworzenia notatki.</Text>
+  <Text Key="Note_Needs_Name">Twoja notatka musi mieć nazwę.</Text>
+  <Text Key="Already_Note_With_That_Name">Istnieje już notatka o tej nazwie.</Text>
+  <Text Key="Notebook_Needs_Name">Twój notes potrzebuje nazwy. Proszę spróbuj ponownie.</Text>
+  <Text Key="Already_Notebook_With_That_Name">Istnieje już notes z tą nazwą. Proszę spróbuj ponownie.</Text>
+  <Text Key="Invalid_File">To nie jest poprawny plik.</Text>
+  <Text Key="Link_Does_Not_Work_Anymore">Ten link już nie działa</Text>
+  <Text Key="License">Licentie</Text>
+  <Text Key="Backup_And_Restore">Backup en restore</Text>
+  <Text Key="Border">Rand</Text>
+  <Text Key="Show_Window_Border">Geef een rand van 1 px weer rond het venster</Text>
+  <Text Key="Log_File">Log bestand</Text>
+  <Text Key="Version">Versie</Text>
+</Language>
