@@ -5,6 +5,7 @@
 - [Added] Simplified Chinese translation
 - [Added] Russian translation
 - [Added] Portuguese translation
+- [Added] Polish translation
 - [Changed] Knowte is now Open Source Software! The source code is available here: https://github.com/digimezzo/Knowte
 - [Changed] Dark parts of the windows are now transparent and blurred on Windows 10
 - [Fixed] Possible crash when exporting a note
